# routes/order/commandOrderRouter.js
@@ -4,42 +4,47 @@ const Order = require("../../models/Order");
 const Card = require("../../models/Card");
 const Product = require("../../models/Product");
 const emailService = require("../../service/emailService");
+const validate = require("../../middleware/validationControl");
 
-router.post("/", async(req, res) => {
+router.post("/", validate("orderSchema"), async(req, res) => {
     try {
         const card = await Card.findOne({ userId: req.userId });
 
-        const order = new Order({
-            cardItems: card.products,
-            totalPrice: card.totalPrice,
-            userId: req.userId,
-            payType: req.body.payType,
-            address: req.body.address,
-        });
-
-        var arr = card.products;
-
-        var hasStock = await stockSituation(arr);
-        console.log("stock", hasStock);
-
-        if (typeof hasStock === "boolean") {
-            console.log("siparişi onayla");
-            card.products.map(async(item) => {
-                var product = await Product.findById(item.productId);
-                product.stock = product.stock - item.amount;
-                product.save();
+        if (card.products.length > 0) {
+            const order = new Order({
+                cardItems: card.products,
+                totalPrice: card.totalPrice,
+                userId: req.userId,
+                payType: req.body.payType,
+                address: req.body.address,
             });
-            order.save();
-            card.products = [];
-            card.totalPrice = 0;
-            card.save();
-            emailService(req, res);
-            return res.json(order);
+
+            var arr = card.products;
+
+            var hasStock = await stockSituation(arr);
+            console.log("stock", hasStock);
+
+            if (typeof hasStock === "boolean") {
+                console.log("siparişi onayla");
+                card.products.map(async(item) => {
+                    var product = await Product.findById(item.productId);
+                    product.stock = product.stock - item.amount;
+                    product.save();
+                });
+                order.save();
+                card.products = [];
+                card.totalPrice = 0;
+                card.save();
+                emailService(req, res);
+                return res.json(order);
+            } else {
+                console.log("sipariş iptali");
+                res.status(404).json({
+                    error: `${hasStock} isimli ürün için istenen adette stok yoktur`,
+                });
+            }
         } else {
-            console.log("sipariş iptali");
-            res.status(404).json({
-                error: `${hasStock} isimli ürün için istenen adette stok yoktur`,
-            });
+            res.json("Sepette ürün yok");
         }
     } catch (error) {
         res.status(400).json({ error: error.message });
